test/pass/optargs/optarg_class_method.lily
class abc {
    define ghi(a: *Integer=10) {
    }
}

abc().ghi()
